# chat-gpt-langchain-slack-bot-aws

./: .gitignore  Makefile  README.md
src_chat_gpt_requester/: .gitignore  Makefile  main.py  pyproject.toml
src_gateway/: Dockerfile  Makefile  main.py  pyproject.toml
terraform/envs/example/: main.tf  providers.tf
terraform/modules/slack_bot/: api_gateway.tf  data.tf  ecr_chat_gpt_requester.tf  ecr_gateway.tf  iam_chat_gpt_requester.tf  iam_gateway.tf  lambda_chat_gpt_requester.tf  lambda_gateway.tf  variables.tf
