[tool.poetry]
name = "chat-gpt-requester"
version = "0.1.0"
description = ""
authors = ["Jimon-s <22317839+Jimon-s@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.155"
langchain = "^0.0.202"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
